# ComfyUI

./: .gitignore  .pre-commit-config.yaml  cuda_malloc.py  execution.py  folder_paths.py  latent_preview.py  main.py  new_updater.py  node_helpers.py  nodes.py  prompt.json  pyproject.toml  requirements.txt  server.py
app/: app_settings.py  user_manager.py
comfy/: cli_args.py  clip_model.py  clip_vision.py  conds.py  controlnet.py  diffusers_convert.py  diffusers_load.py  gligen.py  latent_formats.py  llm.py  lora.py  model_base.py  model_detection.py  model_management.py  model_patcher.py  model_sampling.py  ops.py  sa_t5.py  sample.py  sampler_helpers.py  samplers.py  sd.py  sd1_clip.py  sd2_clip.py  sd3_clip.py  sdxl_clip.py  supported_models.py  supported_models_base.py  t5.py  utils.py
comfy_extras/: nodes_advanced_samplers.py  nodes_align_your_steps.py  nodes_attention_multiply.py  nodes_audio.py  nodes_canny.py  nodes_clip_sdxl.py  nodes_compositing.py  nodes_custom_sampler.py  nodes_differential_diffusion.py  nodes_freelunch.py  nodes_gits.py  nodes_hypernetwork.py  nodes_hypertile.py  nodes_images.py  nodes_ip2p.py  nodes_latent.py  nodes_mask.py  nodes_model_advanced.py  nodes_model_downscale.py  nodes_model_merging.py  nodes_model_merging_model_specific.py  nodes_morphology.py  nodes_pag.py  nodes_perpneg.py  nodes_photomaker.py  nodes_post_processing.py  nodes_rebatch.py  nodes_sag.py  nodes_sd3.py  nodes_sdupscale.py  nodes_stable3d.py  nodes_stable_cascade.py  nodes_tomesd.py  nodes_upscale_model.py  nodes_video_model.py  nodes_webcam.py
web/: index.html  (+1 more)
(+111 files in other folders)
